--- a/suffix-trees/suffix-trees.cabal
+++ b/suffix-trees/suffix-trees.cabal
@@ -17,16 +17,23 @@ library
   hs-source-dirs:      src
   exposed-modules:     Lib
   build-depends:       base >= 4.7 && < 5
+                     , protolude
+                     , text
   default-language:    Haskell2010
+  default-extensions:  NoImplicitPrelude
 
 executable suffix-trees-exe
-  hs-source-dirs:      app
+  hs-source-dirs:      app,src
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
                      , suffix-trees
                      , protolude
+                     , text
   default-language:    Haskell2010
+  default-extensions:  NoImplicitPrelude
+  other-extensions:    NoImplicitPrelude
+  other-modules:       Lib
 
 test-suite suffix-trees-test
   type:                exitcode-stdio-1.0
