--- a/suffix-trees.cabal
+++ b/suffix-trees.cabal
@@ -21,6 +21,7 @@ library
                      , text
   default-language:    Haskell2010
   default-extensions:  NoImplicitPrelude
+                     , OverloadedStrings
 
 executable suffix-trees-exe
   hs-source-dirs:      app,src
@@ -32,7 +33,7 @@ executable suffix-trees-exe
                      , text
   default-language:    Haskell2010
   default-extensions:  NoImplicitPrelude
-  other-extensions:    NoImplicitPrelude
+                     , OverloadedStrings
   other-modules:       Lib
 
 test-suite suffix-trees-test
