--- a/suffix-trees.cabal
+++ b/suffix-trees.cabal
@@ -1,7 +1,8 @@
 name:                suffix-trees
-version:             0.1.0.0
--- synopsis:
--- description:
+version:             0.2.0.0
+synopsis:            Suffix trees in haskell
+description:         This is so far an experimental library for implementing
+                     suffix trees, created as a part of my master thesis.
 homepage:            https://github.com/githubuser/suffix-trees#readme
 license:             BSD3
 license-file:        LICENSE
@@ -19,6 +20,8 @@ library
   build-depends:       base >= 4.7 && < 5
                      , protolude
                      , text
+                     , pretty-tree
+                     , containers
   default-language:    Haskell2010
   default-extensions:  NoImplicitPrelude
                      , OverloadedStrings
@@ -26,15 +29,17 @@ library
 executable suffix-trees-exe
   hs-source-dirs:      app,src
   main-is:             Main.hs
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
                      , suffix-trees
                      , protolude
                      , text
+                     , pretty-tree
+                     , containers
   default-language:    Haskell2010
   default-extensions:  NoImplicitPrelude
                      , OverloadedStrings
   other-modules:       Lib
+  ghc-options:
 
 test-suite suffix-trees-test
   type:                exitcode-stdio-1.0
@@ -42,7 +47,7 @@ test-suite suffix-trees-test
   main-is:             Spec.hs
   build-depends:       base
                      , suffix-trees
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  ghc-options:
   default-language:    Haskell2010
 
 source-repository head
