--- a/suffix-trees.cabal
+++ b/suffix-trees.cabal
@@ -22,6 +22,7 @@ library
                      , text
                      , pretty-tree
                      , containers
+                     , parsec
   default-language:    Haskell2010
   default-extensions:  NoImplicitPrelude
                      , OverloadedStrings
@@ -35,6 +36,7 @@ executable suffix-trees-exe
                      , text
                      , pretty-tree
                      , containers
+                     , parsec
   default-language:    Haskell2010
   default-extensions:  NoImplicitPrelude
                      , OverloadedStrings
