--- a/suffix-trees.cabal
+++ b/suffix-trees.cabal
@@ -17,6 +17,8 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     Lib
+                     , Draw
+                     , Reader
   build-depends:       base >= 4.7 && < 5
                      , protolude
                      , text
