--- a/stack.yaml
+++ b/stack.yaml
@@ -17,6 +17,8 @@
 #  location: "./custom-snapshot.yaml"
 resolver: lts-9.11
 
+ghc-build: nopie
+
 # User packages to be built.
 # Various formats can be used as shown in the example below.
 #
