--- a/suffix-trees-haskell.cabal
+++ b/suffix-trees-haskell.cabal
@@ -1,56 +1,94 @@
+-- This file has been generated from package.yaml by hpack version 0.21.2.
+--
+-- see: https://github.com/sol/hpack
+--
+-- hash: fe12dcfcae4821aa58c3a777bd431542607b53b410980308a98b9768587645b4
+
 name:                suffix-trees-haskell
-version:             0.2.0.0
-synopsis:            Suffix trees in haskell
-description:         This is so far an experimental library for implementing
-                     suffix trees, created as a part of my master thesis.
-homepage:            https://github.com/githubuser/suffix-trees-haskell#readme
-license:             BSD3
+version:             1.0.0
 license-file:        LICENSE
-author:              Author name here
-maintainer:          example@example.com
-copyright:           2017 Author name here
-category:            Web
 build-type:          Simple
-extra-source-files:  README.md
-cabal-version:       >=1.10
+cabal-version:       >= 1.10
+
+flag dev
+  description: Turn on development settings, like auto-reload templates.
+  manual: False
+  default: False
+
+flag library-only
+  description: Build for use with "yesod devel"
+  manual: False
+  default: False
 
 library
-  hs-source-dirs:      src
-  exposed-modules:     Lib
-                     , Draw
-                     , Reader
-  build-depends:       base >= 4.7 && < 5
-                     , protolude
-                     , text
-                     , pretty-tree
-                     , containers
-                     , parsec
-                     , QuickCheck
-                     , random
-  default-language:    Haskell2010
-  default-extensions:  NoImplicitPrelude
-                     , OverloadedStrings
+  hs-source-dirs:
+      src
+  default-extensions: NoImplicitPrelude
+  exposed-modules:
+      Draw
+      LazyTree.Functional
+      Reader
+      Util
+  other-modules:
+      Paths_suffix_trees_haskell
+  build-depends:
+      QuickCheck
+    , base >=4.8.2.0 && <4.9 || >=4.9.1.0 && <5
+    , containers
+    , parsec
+    , pretty-tree ==0.1.0.0
+    , protolude
+    , random
+    , text
+  if (flag(dev)) || (flag(library-only))
+    ghc-options: -Wall -fwarn-tabs -O0
+    cpp-options: -DDEVELOPMENT
+  else
+    ghc-options: -Wall -fwarn-tabs -O2
+  default-language: Haskell2010
 
-executable suffix-trees-haskell-exe
-  hs-source-dirs:      app,src
-  main-is:             Main.hs
-  build-depends:       base
-                     , suffix-trees-haskell
-  default-language:    Haskell2010
-  default-extensions:  NoImplicitPrelude
-                     , OverloadedStrings
-  other-modules:       Lib
-  ghc-options:
+executable suffix-trees-haskell
+  main-is: Main.hs
+  other-modules:
+      Paths_suffix_trees_haskell
+  hs-source-dirs:
+      app
+  default-extensions: NoImplicitPrelude
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+      QuickCheck
+    , base >=4.8.2.0 && <4.9 || >=4.9.1.0 && <5
+    , containers
+    , parsec
+    , pretty-tree ==0.1.0.0
+    , protolude
+    , random
+    , suffix-trees-haskell
+    , text
+  if flag(library-only)
+    buildable: False
+  default-language: Haskell2010
 
-test-suite suffix-trees-haskell-test
-  type:                exitcode-stdio-1.0
-  hs-source-dirs:      test
-  main-is:             Spec.hs
-  build-depends:       base
-                     , suffix-trees-haskell
-  ghc-options:
-  default-language:    Haskell2010
-
-source-repository head
-  type:     git
-  location: https://github.com/githubuser/suffix-trees-haskell
+test-suite test
+  type: exitcode-stdio-1.0
+  main-is: Spec.hs
+  other-modules:
+      Benchmark
+      LazyTree
+      Paths_suffix_trees_haskell
+  hs-source-dirs:
+      test
+  default-extensions: NoImplicitPrelude
+  ghc-options: -Wall
+  build-depends:
+      QuickCheck
+    , base >=4.8.2.0 && <4.9 || >=4.9.1.0 && <5
+    , containers
+    , hspec >=2.0.0
+    , parsec
+    , pretty-tree ==0.1.0.0
+    , protolude
+    , random
+    , suffix-trees-haskell
+    , text
+  default-language: Haskell2010
