--- a/package.yaml
+++ b/package.yaml
@@ -13,6 +13,7 @@ dependencies:
 
 default-extensions:
     - NoImplicitPrelude
+    - OverloadedStrings
 
 # The library contains all of our application code. The executable
 # defined below is just a thin wrapper.
