--- a/suffix-trees-haskell.cabal
+++ b/suffix-trees-haskell.cabal
@@ -2,7 +2,7 @@
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: ee4975417daa84804d96cdd4aedf7c596bd0eadc98ddab48f9797063f71bb0bd
+-- hash: 2d279bb33a70a0c6964f4cdf6f97214b9bc6a90168e18ede61379f560c2fbde7
 
 name:                suffix-trees-haskell
 version:             1.0.0
@@ -41,6 +41,7 @@ library
     , random
     , regex-compat
     , text
+    , vector
   default-language: Haskell2010
 
 executable suffix-trees-haskell
@@ -65,6 +66,7 @@ executable suffix-trees-haskell
     , regex-compat
     , suffix-trees-haskell
     , text
+    , vector
   default-language: Haskell2010
 
 test-suite test
@@ -95,4 +97,5 @@ test-suite test
     , regex-compat
     , suffix-trees-haskell
     , text
+    , vector
   default-language: Haskell2010
