--- a/suffix-trees-haskell.cabal
+++ b/suffix-trees-haskell.cabal
@@ -2,7 +2,7 @@
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 568c2f3e4016e7365d4dc4e557e36707bb5752f96c0944c0f5918a22d5722cad
+-- hash: f3925472f1ea20cd9bd2dec93bff6b8360f8d5141cc468bcdb98962fcc21878c
 
 name:                suffix-trees-haskell
 version:             1.0.0
@@ -41,6 +41,7 @@ library
     , protolude
     , random
     , regex-compat
+    , split
     , text
     , vector
   default-language: Haskell2010
@@ -65,6 +66,7 @@ executable suffix-trees-haskell
     , protolude
     , random
     , regex-compat
+    , split
     , suffix-trees-haskell
     , text
     , vector
@@ -96,6 +98,7 @@ test-suite test
     , protolude
     , random
     , regex-compat
+    , split
     , suffix-trees-haskell
     , text
     , vector
